<resources>
    <string name="app_name">PopView</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prefer_ncies">Preferències</string>
    <string name="ajuda">Ajuda</string>
    <string name="idioma">Idioma</string>
    <string name="mida_del_text">Mida del text</string>
    <string name="zona_horaria">Zona horària</string>
    <string name="tema">Tema</string>
    <string name="restablir_els_valors_predeterminats">Restablir els valors predeterminats</string>
    <string name="llistes">Llistes</string>
    <string name="s_ries_per_veure">Sèries per veure</string>
    <string name="p_blica">Pública</string>
    <string name="pel_l_cules_terror">Pel·lícules de terror</string>
    <string name="millors_s_ries">Millors Sèries</string>
    <string name="privada">Privada</string>
    <string name="primers_passos">Primers passos</string>
    <string name="centre_d_ajuda">Centre d\'ajuda</string>
    <string name="informaci_de_l_aplicaci">Informació de l\'aplicació</string>
    <string name="tornar">Tornar</string>
    <string name="buscar">Buscar</string>
    <string name="t_tulo_de_la_lista">Títol de la llista</string>
    <string name="guardar_lista">Desar llista</string>
    <string name="nuevo_titulo">Nou títol</string>
    <string name="a_adir_titulo">Afegir títol</string>
    <string name="guardar_cambios">Desar canvis</string>
    <string name="categories">Categories</string>
    <string name="acci">Acció</string>
    <string name="fantasia">Fantasia</string>
    <string name="superherois">Superherois</string>
    <string name="recomanacions">Recomanacions</string>
    <string name="s_ries_m_s_populars">Sèries més populars</string>
    <string name="pel_l_cules_m_s_populars">Pel·lícules més populars</string>
    <string name="usuari">Usuari</string>
    <string name="email">Email</string>
    <string name="has_oblidat_la_contrasenya">Has oblidat la contrasenya?</string>
    <string name="registre">Registre</string>
    <string name="inici">Inici</string>
    <string name="iniciar_como_convidat">Iniciar com convidat</string>
    <string name="popview">PopView</string>
    <string name="totes_les_teves_pel_l_cules_i_s_ries_sempre_a_m_nafegeix_organitza_i_valora_amb_un_sol_clic">Totes les teves pel·lícules i sèries, sempre a mà.\nAfegeix, organitza i valora amb un sol clic.</string>
    <string name="comedia">Comèdia</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="_3">3.</string>
    <string name="_4">4.</string>
    <string name="_5">5.</string>
    <string name="_6">6.</string>
    <string name="edat">Edat</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="contrasenya2">Confirmar contrasenya</string>
    <string name="user2131">user2131</string>
    <string name="deadpool_y_lobezno">Deadpool y Lobezno</string>
    <string name="description_deadpoolylobezno">Un apático Wade Wilson se afana en la vida civil tras dejar atrás sus días como Deadpool, un mercenario moralmente flexible. Pero cuando su mundo natal se enfrenta a una amenaza existencial, Wade debe volver a vestirse a regañadientes con un Lobezno aún más reacio a ayudar.</string>
    <string name="description_sabrina">Sabrina está a punto de cumplir 16 años y se debate entre el mundo de la magia de su familia y el mundo real de sus amigos.</string>
    <string name="description_stranger">Homenaje a los clásicos misterios sobrenaturales de los años 80,Stranger Things es la historia de un niño que desaparece en el pequeño pueblo de Hawkins, Indiana, sin dejar rastro en 1983. En su búsqueda desesperada, tanto sus amigos y familiares como el sheriff local se ven envueltos en un enigma extraordinario: experimentos ultrasecretos, fuerzas paranormales terroríficas y una niña muy, muy rara...</string>
    <string name="description_orangeisthenewblack">Piper Chapman (Taylor Schilling), una mujer de Connecticut con una vida estable a punto de casarse, es detenida a raíz de un delito de drogas que cometió hace una década: en aquellos días llevó un maletín con droga para Alex Vause (Laura Prepon), una traficante y antigua amante de Piper. Tras el juicio, es enviada a prisión de mujeres en Litchfield, Nueva York.</string>
    <string name="description_miercoles">Sigue los años de Miércoles Addams como estudiante, intentando dominar su emergente habilidad psíquica mientras trata de resolver el misterio que enredó a sus padres.</string>
    <string name="description_delrevesdos"> Riley entra en la adolescencia y el Cuartel General de su cabeza sufre una repentina reforma para hacerle hueco a algo totalmente inesperado propio de la pubertad: ¡Nuevas emociones! Alegría, Tristeza, Ira, Miedo y Asco, con años de impecable gestión a sus espaldas (según ellos...) no saben muy bien qué sentir cuando aparece con enorme ímpetu Ansiedad.</string>
    <string name="description_respira">Biel es uno de los residentes que lleva unos meses dejándose la piel en un hospital público. Cientos de guardias, miles de horas, que apenas le dejan tiempo para su vida, todo con tal de convertirse en el mejor doctor. Lo que no se imagina es que en el hospital va a estallar una huelga total, sin servicios mínimos.</string>
    <string name="description_beetlejuicedos">Tras una inesperada tragedia familiar, tres generaciones de la familia Deetz regresan a Winter River. La vida de Lydia, todavía atormentada por Bitelchús, da un vuelco cuando su rebelde hija adolescente, Astrid, descubre la misteriosa maqueta de la ciudad en el desván y el portal al Más Allá se abre accidentalmente.</string>


    <string-array name="idiomas_array">
        <item>Català</item>
        <item>Castellà</item>
        <item>Anglès</item>
    </string-array>
    <string-array name="mides_array">
        <item>Petita</item>
        <item>Mitjana</item>
        <item>Gran</item>
    </string-array>
    <string-array name="zonas_horarias_array">
        <item>UTC-12:00 - Baker Island Time</item>
        <item>UTC-11:00 - Niue Time</item>
        <item>UTC-10:00 - Hawaii-Aleutian Standard Time</item>
        <item>UTC-09:00 - Alaska Standard Time</item>
        <item>UTC-08:00 - Pacific Standard Time</item>
        <item>UTC-07:00 - Mountain Standard Time</item>
        <item>UTC-06:00 - Central Standard Time</item>
        <item>UTC-05:00 - Eastern Standard Time</item>
        <item>UTC-04:00 - Atlantic Standard Time</item>
        <item>UTC-03:00 - Argentina Time</item>
        <item>UTC-02:00 - Azores Time</item>
        <item>UTC-01:00 - Cape Verde Time</item>
        <item>UTC±00:00 - Greenwich Mean Time (GMT)</item>
        <item>UTC+01:00 - Central European Time</item>
        <item>UTC+02:00 - Eastern European Time</item>
        <item>UTC+03:00 - Moscow Time</item>
        <item>UTC+04:00 - Azerbaijan Standard Time</item>
        <item>UTC+05:00 - Pakistan Standard Time</item>
        <item>UTC+06:00 - Bangladesh Standard Time</item>
        <item>UTC+07:00 - Indochina Time</item>
        <item>UTC+08:00 - China Standard Time</item>
        <item>UTC+09:00 - Japan Standard Time</item>
        <item>UTC+10:00 - Australian Eastern Standard Time</item>
        <item>UTC+11:00 - Solomon Islands Time</item>
        <item>UTC+12:00 - Fiji Time</item>
    </string-array>
    <string-array name="tema_array">
        <item>Clar</item>
        <item>Fosc</item>
    </string-array>
    <string-array name="rating_options">
        <item>Calificar</item>
    </string-array>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>
